# sift_final

./: .gitignore  CMakeLists.txt  README.md
bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
bulid/examples/: Makefile  cmake_install.cmake
bulid/src/: Makefile  cmake_install.cmake
data/: generate_list.py  list.txt  list_bac.txt
examples/: CMakeLists.txt  cuda_test.cpp  match_features.cpp  sift_test.cpp
final_result/: matching_coordinates.txt  matching_coordinates_base.txt  matching_list_base.txt  time.txt  time_base.txt  time_parallel.txt
res/: readme.md
scripts/: cmp.py  cmp_deviation.py  rate.py  run.sh  time_plot.py  verify.sh
src/: CMakeLists.txt  gpu.cu  gpu.h  image.cu  image.hpp  image_cu.h  main.cpp  sift.cpp  sift.cu  sift.hpp  sift_cu.h  sift_gre_omp.cpp  sift_omp.cpp  sift_save_draw.cpp
